syntax = "proto3";

option csharp_namespace = "OrderService";

package order;

enum OrderStatus {
  Created = 0;
  Finished = 1;
  Cancelled = 2;
  PendingPayment = 3;
  Accepted = 4;
  AnalysisTaken = 5;
  AnalysisInProgress = 6;
  DeliverymanLating = 7;
}

message DeliveryDataGrpc { int32 LateTime = 1; }

message UserResponseGrpc {
  int32 id = 1;
  string name = 2;
  string phone = 3;
}

message AnalysisResponseGrpc {
  int64 id = 1;
  string Title = 2;
  string Description = 3;
  int32 WaitingPeriodAnalysisDays = 4;
  float Price = 5;
  string Material = 6;
}
message OrderResponseGrpc {
  int64 Id = 1;
  int64 CustomerId = 2;
  int64 DeliverymanId = 3;
  string OrderDate = 4;
  string DeliveryDate = 5;
  OrderStatus orderStatus = 6;
  string Comments = 7;
  string DeliveryAddress = 8;
  bool IsFastDelivery = 9;
  repeated AnalysisResponseGrpc Items = 10;
  UserResponseGrpc Customer = 11;
  DeliveryDataGrpc DeliveryData = 12;
}

service Order {
  rpc GetOrder(GetOrderRequestGrpc) returns (GetOrderResponseGrpc);

  rpc GetOrderById(GetOrderByIdRequestGrpc) returns (GetOrderResponseGrpc);

  rpc GetOrders(GetOrdersRequestGrpc) returns (GetOrdersResponseGrpc);

  rpc UpdateOrderStatus(UpdateOrderStatusRequestGrpc)
      returns (UpdateOrderStatusResponseGrpc);
}

// The request message containing the user's name.
message GetOrderRequestGrpc {
  int64 Id = 1;
  int64 DeliverymanId = 2;
}

message GetOrderResponseGrpc {
  OrderResponseGrpc response = 1;
  bool success = 2;
}

message GetOrderByIdRequestGrpc { int64 Id = 1; }

message GetOrderByIdResponseGrpc {
  OrderResponseGrpc response = 1;
  bool success = 2;
}

message GetOrdersRequestGrpc {
  int64 DeliverymanId = 1;
  repeated OrderStatus orderStatus = 2;
}

message GetOrdersResponseGrpc {
  repeated OrderResponseGrpc response = 1;
  bool success = 2;
}

message UpdateOrderStatusRequestGrpc {
  int64 DeliverymanId = 1;
  int64 id = 2;
  OrderStatus orderStatus = 3;
  int32 time = 4;
}

message UpdateOrderStatusResponseGrpc {
  bool success = 1;
  bool hasApplied = 2;
}